# Time_Series_Modeling-Simulation_Engine

./: LICENSE  README.md  pyproject.toml
examples/: demo_ar_forecast.py
src/tsengine/: ar_model.py  data.py  diagnostics.py  evaluation.py  init.py  simulation.py
