```toml
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tsengine"
version = "0.1.0"
description = "Time series modeling and simulation engine"
requires-python = ">=3.10"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
stats = ["statsmodels>=0.14"]

[tool.setuptools.packages.find]
where = ["src"]

